bebytes/tests/compile_time/incomplete_byte.stderr
error: bits attributes must complete a full byte. Total bits: 7, which is 1 bits short of a complete byte
  --> tests/compile_time/incomplete_byte.rs:7:23
   |
7  |   struct IncompleteByte {
   |  _______________________^
8  | |     #[bits(3)]
9  | |     first: u8,
10 | |     #[bits(4)]
...  |
13 | | }
   | |_^
